feat: 회원가입 명세 수정
feat: 회원가입 명세 수정
